--- a/Utils/config.ini
+++ b/Utils/config.ini
@@ -3,5 +3,5 @@ Database=exerciciowk
 Username=root
 Server=localhost
 Port=3306
-Password=senha123@
-LibraryPath=C:\Users\Eder\Documents\ExercicioWK\Utils\libmysql.dll
+Password=
+LibraryPath=Caminha da lib\libmysql.dll
